exports[`prefer-includes > invalid(1): 'foobar'.indexOf('foo') !== -1 1`] = `

  1 | 'foobar'.indexOf('foo') !== -1

`;

exports[`prefer-includes > invalid(1): 'foobar'.indexOf('foo') !== -1 2`] = `

Message:
> 1 | 'foobar'.indexOf('foo') !== -1
    |          ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.

Output:
  1 | 'foobar'.includes('foo')

`;

exports[`prefer-includes > invalid(1): values.some(x => x === \"foo\") 1`] = `

  1 | values.some(x => x === "foo")

`;

exports[`prefer-includes > invalid(1): values.some(x => x === \"foo\") 2`] = `

Message:
> 1 | values.some(x => x === "foo")
    |        ^^^^ Use \`.includes()\` instead of \`.some()\` when checking value existence.

Output:
  1 | values.includes("foo")

`;

exports[`prefer-includes > invalid(10): function fn() {\n\tfoo.some(x => x === arguments.length)\n} 1`] = `

  1 | function fn() {
  2 | 	foo.some(x => x === arguments.length)
  3 | }

`;

exports[`prefer-includes > invalid(10): function fn() {\n\tfoo.some(x => x === arguments.length)\n} 2`] = `

Message:
  1 | function fn() {
> 2 | 	foo.some(x => x === arguments.length)
    | 	    ^^^^ Use \`.includes()\` instead of \`.some()\` when checking value existence.
  3 | }

Output:
  1 | function fn() {
  2 | 	foo.includes(arguments.length)
  3 | }

`;

exports[`prefer-includes > invalid(10): str.indexOf('foo') <= -1 1`] = `

  1 | str.indexOf('foo') <= -1

`;

exports[`prefer-includes > invalid(10): str.indexOf('foo') <= -1 2`] = `

Message:
> 1 | str.indexOf('foo') <= -1
    |     ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.

Output:
  1 | !str.includes('foo')

`;

exports[`prefer-includes > invalid(11): function fn() {\n\tfoo.some(x => x === this[1])\n} 1`] = `

  1 | function fn() {
  2 | 	foo.some(x => x === this[1])
  3 | }

`;

exports[`prefer-includes > invalid(11): function fn() {\n\tfoo.some(x => x === this[1])\n} 2`] = `

Message:
  1 | function fn() {
> 2 | 	foo.some(x => x === this[1])
    | 	    ^^^^ Use \`.includes()\` instead of \`.some()\` when checking value existence.
  3 | }

Output:
  1 | function fn() {
  2 | 	foo.includes(this[1])
  3 | }

`;

exports[`prefer-includes > invalid(11): str.lastIndexOf('foo') <= -1 1`] = `

  1 | str.lastIndexOf('foo') <= -1

`;

exports[`prefer-includes > invalid(11): str.lastIndexOf('foo') <= -1 2`] = `

Message:
> 1 | str.lastIndexOf('foo') <= -1
    |     ^^^^^^^^^^^ Use \`.includes()\`, rather than \`.lastIndexOf()\`, when checking for existence.

Output:
  1 | !str.includes('foo')

`;

exports[`prefer-includes > invalid(12): <template><div v-if=\"str.indexOf('foo') <= -1\"></div></template> 1`] = `

  1 | <template><div v-if="str.indexOf('foo') <= -1"></div></template>

`;

exports[`prefer-includes > invalid(12): <template><div v-if=\"str.indexOf('foo') <= -1\"></div></template> 2`] = `

Message:
> 1 | <template><div v-if="str.indexOf('foo') <= -1"></div></template>
    |                          ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.

Output:
  1 | <template><div v-if="!str.includes('foo')"></div></template>

`;

exports[`prefer-includes > invalid(12): values.some(x => x === foo()) 1`] = `

  1 | values.some(x => x === foo())

`;

exports[`prefer-includes > invalid(12): values.some(x => x === foo()) 2`] = `

Message:
> 1 | values.some(x => x === foo())
    |        ^^^^ Use \`.includes()\` instead of \`.some()\` when checking value existence.

Suggestion 1/1: Replace \`.some()\` with \`.includes()\`.:
  1 | values.includes(foo())

`;

exports[`prefer-includes > invalid(13): foo.some(function a(x) {\n\treturn x === (function (a) {\n\t\treturn a(this) === arguments[1]\n\t}).call(thisObject, anotherFunctionNamedA, secondArgument)\n}) 1`] = `

  1 | foo.some(function a(x) {
  2 | 	return x === (function (a) {
  3 | 		return a(this) === arguments[1]
  4 | 	}).call(thisObject, anotherFunctionNamedA, secondArgument)
  5 | })

`;

exports[`prefer-includes > invalid(13): foo.some(function a(x) {\n\treturn x === (function (a) {\n\t\treturn a(this) === arguments[1]\n\t}).call(thisObject, anotherFunctionNamedA, secondArgument)\n}) 2`] = `

Message:
> 1 | foo.some(function a(x) {
    |     ^^^^ Use \`.includes()\` instead of \`.some()\` when checking value existence.
  2 | 	return x === (function (a) {
  3 | 		return a(this) === arguments[1]
  4 | 	}).call(thisObject, anotherFunctionNamedA, secondArgument)
  5 | })

Suggestion 1/1: Replace \`.some()\` with \`.includes()\`.:
  1 | foo.includes((function (a) {
  2 | 		return a(this) === arguments[1]
  3 | 	}).call(thisObject, anotherFunctionNamedA, secondArgument))

`;

exports[`prefer-includes > invalid(13): str.indexOf('foo') == -1 1`] = `

  1 | str.indexOf('foo') == -1

`;

exports[`prefer-includes > invalid(13): str.indexOf('foo') == -1 2`] = `

Message:
> 1 | str.indexOf('foo') == -1
    |     ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.

Output:
  1 | !str.includes('foo')

`;

exports[`prefer-includes > invalid(14): str.lastIndexOf('foo') == -1 1`] = `

  1 | str.lastIndexOf('foo') == -1

`;

exports[`prefer-includes > invalid(14): str.lastIndexOf('foo') == -1 2`] = `

Message:
> 1 | str.lastIndexOf('foo') == -1
    |     ^^^^^^^^^^^ Use \`.includes()\`, rather than \`.lastIndexOf()\`, when checking for existence.

Output:
  1 | !str.includes('foo')

`;

exports[`prefer-includes > invalid(15): <template><div v-if=\"str.indexOf('foo') == -1\"></div></template> 1`] = `

  1 | <template><div v-if="str.indexOf('foo') == -1"></div></template>

`;

exports[`prefer-includes > invalid(15): <template><div v-if=\"str.indexOf('foo') == -1\"></div></template> 2`] = `

Message:
> 1 | <template><div v-if="str.indexOf('foo') == -1"></div></template>
    |                          ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.

Output:
  1 | <template><div v-if="!str.includes('foo')"></div></template>

`;

exports[`prefer-includes > invalid(16): 'foobar'.indexOf('foo') >= 0 1`] = `

  1 | 'foobar'.indexOf('foo') >= 0

`;

exports[`prefer-includes > invalid(16): 'foobar'.indexOf('foo') >= 0 2`] = `

Message:
> 1 | 'foobar'.indexOf('foo') >= 0
    |          ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.

Output:
  1 | 'foobar'.includes('foo')

`;

exports[`prefer-includes > invalid(17): 'foobar'.lastIndexOf('foo') >= 0 1`] = `

  1 | 'foobar'.lastIndexOf('foo') >= 0

`;

exports[`prefer-includes > invalid(17): 'foobar'.lastIndexOf('foo') >= 0 2`] = `

Message:
> 1 | 'foobar'.lastIndexOf('foo') >= 0
    |          ^^^^^^^^^^^ Use \`.includes()\`, rather than \`.lastIndexOf()\`, when checking for existence.

Output:
  1 | 'foobar'.includes('foo')

`;

exports[`prefer-includes > invalid(18): <template><div v-if=\"'foobar'.indexOf('foo') >= 0\"></div></template> 1`] = `

  1 | <template><div v-if="'foobar'.indexOf('foo') >= 0"></div></template>

`;

exports[`prefer-includes > invalid(18): <template><div v-if=\"'foobar'.indexOf('foo') >= 0\"></div></template> 2`] = `

Message:
> 1 | <template><div v-if="'foobar'.indexOf('foo') >= 0"></div></template>
    |                               ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.

Output:
  1 | <template><div v-if="'foobar'.includes('foo')"></div></template>

`;

exports[`prefer-includes > invalid(19): [1,2,3].indexOf(4) !== -1 1`] = `

  1 | [1,2,3].indexOf(4) !== -1

`;

exports[`prefer-includes > invalid(19): [1,2,3].indexOf(4) !== -1 2`] = `

Message:
> 1 | [1,2,3].indexOf(4) !== -1
    |         ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.

Output:
  1 | [1,2,3].includes(4)

`;

exports[`prefer-includes > invalid(2): 'foobar'.lastIndexOf('foo') !== -1 1`] = `

  1 | 'foobar'.lastIndexOf('foo') !== -1

`;

exports[`prefer-includes > invalid(2): 'foobar'.lastIndexOf('foo') !== -1 2`] = `

Message:
> 1 | 'foobar'.lastIndexOf('foo') !== -1
    |          ^^^^^^^^^^^ Use \`.includes()\`, rather than \`.lastIndexOf()\`, when checking for existence.

Output:
  1 | 'foobar'.includes('foo')

`;

exports[`prefer-includes > invalid(2): values?.some(x => x === \"foo\") 1`] = `

  1 | values?.some(x => x === "foo")

`;

exports[`prefer-includes > invalid(2): values?.some(x => x === \"foo\") 2`] = `

Message:
> 1 | values?.some(x => x === "foo")
    |         ^^^^ Use \`.includes()\` instead of \`.some()\` when checking value existence.

Output:
  1 | values?.includes("foo")

`;

exports[`prefer-includes > invalid(20): [1,2,3].lastIndexOf(4) !== -1 1`] = `

  1 | [1,2,3].lastIndexOf(4) !== -1

`;

exports[`prefer-includes > invalid(20): [1,2,3].lastIndexOf(4) !== -1 2`] = `

Message:
> 1 | [1,2,3].lastIndexOf(4) !== -1
    |         ^^^^^^^^^^^ Use \`.includes()\`, rather than \`.lastIndexOf()\`, when checking for existence.

Output:
  1 | [1,2,3].includes(4)

`;

exports[`prefer-includes > invalid(21): <template><div v-if=\"[1,2,3].indexOf(4) !== -1\"></div></template> 1`] = `

  1 | <template><div v-if="[1,2,3].indexOf(4) !== -1"></div></template>

`;

exports[`prefer-includes > invalid(21): <template><div v-if=\"[1,2,3].indexOf(4) !== -1\"></div></template> 2`] = `

Message:
> 1 | <template><div v-if="[1,2,3].indexOf(4) !== -1"></div></template>
    |                              ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.

Output:
  1 | <template><div v-if="[1,2,3].includes(4)"></div></template>

`;

exports[`prefer-includes > invalid(22): str.indexOf('foo') < 0 1`] = `

  1 | str.indexOf('foo') < 0

`;

exports[`prefer-includes > invalid(22): str.indexOf('foo') < 0 2`] = `

Message:
> 1 | str.indexOf('foo') < 0
    |     ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.

Output:
  1 | !str.includes('foo')

`;

exports[`prefer-includes > invalid(23): str.lastIndexOf('foo') < 0 1`] = `

  1 | str.lastIndexOf('foo') < 0

`;

exports[`prefer-includes > invalid(23): str.lastIndexOf('foo') < 0 2`] = `

Message:
> 1 | str.lastIndexOf('foo') < 0
    |     ^^^^^^^^^^^ Use \`.includes()\`, rather than \`.lastIndexOf()\`, when checking for existence.

Output:
  1 | !str.includes('foo')

`;

exports[`prefer-includes > invalid(24): <template><div v-if=\"str.indexOf('foo') < 0\"></div></template> 1`] = `

  1 | <template><div v-if="str.indexOf('foo') < 0"></div></template>

`;

exports[`prefer-includes > invalid(24): <template><div v-if=\"str.indexOf('foo') < 0\"></div></template> 2`] = `

Message:
> 1 | <template><div v-if="str.indexOf('foo') < 0"></div></template>
    |                          ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.

Output:
  1 | <template><div v-if="!str.includes('foo')"></div></template>

`;

exports[`prefer-includes > invalid(25): ''.indexOf('foo') < 0 1`] = `

  1 | ''.indexOf('foo') < 0

`;

exports[`prefer-includes > invalid(25): ''.indexOf('foo') < 0 2`] = `

Message:
> 1 | ''.indexOf('foo') < 0
    |    ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.

Output:
  1 | !''.includes('foo')

`;

exports[`prefer-includes > invalid(26): ''.lastIndexOf('foo') < 0 1`] = `

  1 | ''.lastIndexOf('foo') < 0

`;

exports[`prefer-includes > invalid(26): ''.lastIndexOf('foo') < 0 2`] = `

Message:
> 1 | ''.lastIndexOf('foo') < 0
    |    ^^^^^^^^^^^ Use \`.includes()\`, rather than \`.lastIndexOf()\`, when checking for existence.

Output:
  1 | !''.includes('foo')

`;

exports[`prefer-includes > invalid(27): <template><div v-if=\"''.indexOf('foo') < 0\"></div></template> 1`] = `

  1 | <template><div v-if="''.indexOf('foo') < 0"></div></template>

`;

exports[`prefer-includes > invalid(27): <template><div v-if=\"''.indexOf('foo') < 0\"></div></template> 2`] = `

Message:
> 1 | <template><div v-if="''.indexOf('foo') < 0"></div></template>
    |                         ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.

Output:
  1 | <template><div v-if="!''.includes('foo')"></div></template>

`;

exports[`prefer-includes > invalid(28): (a || b).indexOf('foo') === -1 1`] = `

  1 | (a || b).indexOf('foo') === -1

`;

exports[`prefer-includes > invalid(28): (a || b).indexOf('foo') === -1 2`] = `

Message:
> 1 | (a || b).indexOf('foo') === -1
    |          ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.

Output:
  1 | !(a || b).includes('foo')

`;

exports[`prefer-includes > invalid(29): (a || b).lastIndexOf('foo') === -1 1`] = `

  1 | (a || b).lastIndexOf('foo') === -1

`;

exports[`prefer-includes > invalid(29): (a || b).lastIndexOf('foo') === -1 2`] = `

Message:
> 1 | (a || b).lastIndexOf('foo') === -1
    |          ^^^^^^^^^^^ Use \`.includes()\`, rather than \`.lastIndexOf()\`, when checking for existence.

Output:
  1 | !(a || b).includes('foo')

`;

exports[`prefer-includes > invalid(3): <template><div v-if=\"'foobar'.indexOf('foo') !== -1\"></div></template> 1`] = `

  1 | <template><div v-if="'foobar'.indexOf('foo') !== -1"></div></template>

`;

exports[`prefer-includes > invalid(3): <template><div v-if=\"'foobar'.indexOf('foo') !== -1\"></div></template> 2`] = `

Message:
> 1 | <template><div v-if="'foobar'.indexOf('foo') !== -1"></div></template>
    |                               ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.

Output:
  1 | <template><div v-if="'foobar'.includes('foo')"></div></template>

`;

exports[`prefer-includes > invalid(3): values.some(x => \"foo\" === x) 1`] = `

  1 | values.some(x => "foo" === x)

`;

exports[`prefer-includes > invalid(3): values.some(x => \"foo\" === x) 2`] = `

Message:
> 1 | values.some(x => "foo" === x)
    |        ^^^^ Use \`.includes()\` instead of \`.some()\` when checking value existence.

Output:
  1 | values.includes("foo")

`;

exports[`prefer-includes > invalid(30): <template><div v-if=\"(a || b).indexOf('foo') === -1\"></div></template> 1`] = `

  1 | <template><div v-if="(a || b).indexOf('foo') === -1"></div></template>

`;

exports[`prefer-includes > invalid(30): <template><div v-if=\"(a || b).indexOf('foo') === -1\"></div></template> 2`] = `

Message:
> 1 | <template><div v-if="(a || b).indexOf('foo') === -1"></div></template>
    |                               ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.

Output:
  1 | <template><div v-if="!(a || b).includes('foo')"></div></template>

`;

exports[`prefer-includes > invalid(31): foo.indexOf(bar, 0) !== -1 1`] = `

  1 | foo.indexOf(bar, 0) !== -1

`;

exports[`prefer-includes > invalid(31): foo.indexOf(bar, 0) !== -1 2`] = `

Message:
> 1 | foo.indexOf(bar, 0) !== -1
    |     ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.

Output:
  1 | foo.includes(bar)

`;

exports[`prefer-includes > invalid(32): foo.indexOf(bar, 1) !== -1 1`] = `

  1 | foo.indexOf(bar, 1) !== -1

`;

exports[`prefer-includes > invalid(32): foo.indexOf(bar, 1) !== -1 2`] = `

Message:
> 1 | foo.indexOf(bar, 1) !== -1
    |     ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.

Output:
  1 | foo.includes(bar, 1)

`;

exports[`prefer-includes > invalid(33): <script setup lang=\"ts\">\nconsole.log([].indexOf(1) != -1);\n</script> 1`] = `

  1 | <script setup lang="ts">
  2 | console.log([].indexOf(1) != -1);
  3 | </script>

`;

exports[`prefer-includes > invalid(33): <script setup lang=\"ts\">\nconsole.log([].indexOf(1) != -1);\n</script> 2`] = `

Message:
  1 | <script setup lang="ts">
> 2 | console.log([].indexOf(1) != -1);
    |                ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.
  3 | </script>

Output:
  1 | <script setup lang="ts">
  2 | console.log([].includes(1));
  3 | </script>

`;

exports[`prefer-includes > invalid(4): str.indexOf('foo') != -1 1`] = `

  1 | str.indexOf('foo') != -1

`;

exports[`prefer-includes > invalid(4): str.indexOf('foo') != -1 2`] = `

Message:
> 1 | str.indexOf('foo') != -1
    |     ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.

Output:
  1 | str.includes('foo')

`;

exports[`prefer-includes > invalid(4): values.some(x => {return x === \"foo\";}) 1`] = `

  1 | values.some(x => {return x === "foo";})

`;

exports[`prefer-includes > invalid(4): values.some(x => {return x === \"foo\";}) 2`] = `

Message:
> 1 | values.some(x => {return x === "foo";})
    |        ^^^^ Use \`.includes()\` instead of \`.some()\` when checking value existence.

Output:
  1 | values.includes("foo")

`;

exports[`prefer-includes > invalid(5): str.lastIndexOf('foo') != -1 1`] = `

  1 | str.lastIndexOf('foo') != -1

`;

exports[`prefer-includes > invalid(5): str.lastIndexOf('foo') != -1 2`] = `

Message:
> 1 | str.lastIndexOf('foo') != -1
    |     ^^^^^^^^^^^ Use \`.includes()\`, rather than \`.lastIndexOf()\`, when checking for existence.

Output:
  1 | str.includes('foo')

`;

exports[`prefer-includes > invalid(5): values.some(function (x) {return x === \"foo\";}) 1`] = `

  1 | values.some(function (x) {return x === "foo";})

`;

exports[`prefer-includes > invalid(5): values.some(function (x) {return x === \"foo\";}) 2`] = `

Message:
> 1 | values.some(function (x) {return x === "foo";})
    |        ^^^^ Use \`.includes()\` instead of \`.some()\` when checking value existence.

Output:
  1 | values.includes("foo")

`;

exports[`prefer-includes > invalid(6): // 1\n(0, values)\n\t// 2\n\t./* 3 */some /* 3 */ (\n\t\t/* 4 */\n\t\tx /* 5 */ => /* 6 */ x /* 7 */ === /* 8 */ \"foo\" /* 9 */\n\t) /* 10 */ 1`] = `

  1 | // 1
  2 | (0, values)
  3 | 	// 2
  4 | 	./* 3 */some /* 3 */ (
  5 | 		/* 4 */
  6 | 		x /* 5 */ => /* 6 */ x /* 7 */ === /* 8 */ "foo" /* 9 */
  7 | 	) /* 10 */

`;

exports[`prefer-includes > invalid(6): // 1\n(0, values)\n\t// 2\n\t./* 3 */some /* 3 */ (\n\t\t/* 4 */\n\t\tx /* 5 */ => /* 6 */ x /* 7 */ === /* 8 */ \"foo\" /* 9 */\n\t) /* 10 */ 2`] = `

Message:
  1 | // 1
  2 | (0, values)
  3 | 	// 2
> 4 | 	./* 3 */some /* 3 */ (
    | 	        ^^^^ Use \`.includes()\` instead of \`.some()\` when checking value existence.
  5 | 		/* 4 */
  6 | 		x /* 5 */ => /* 6 */ x /* 7 */ === /* 8 */ "foo" /* 9 */
  7 | 	) /* 10 */

`;

exports[`prefer-includes > invalid(6): <template><div v-if=\"str.indexOf('foo') != -1\"></div></template> 1`] = `

  1 | <template><div v-if="str.indexOf('foo') != -1"></div></template>

`;

exports[`prefer-includes > invalid(6): <template><div v-if=\"str.indexOf('foo') != -1\"></div></template> 2`] = `

Message:
> 1 | <template><div v-if="str.indexOf('foo') != -1"></div></template>
    |                          ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.

Output:
  1 | <template><div v-if="str.includes('foo')"></div></template>

`;

exports[`prefer-includes > invalid(7): foo.some(function (element) {\n\treturn element === bar.some(x => x === 1);\n}); 1`] = `

  1 | foo.some(function (element) {
  2 | 	return element === bar.some(x => x === 1);
  3 | });

`;

exports[`prefer-includes > invalid(7): foo.some(function (element) {\n\treturn element === bar.some(x => x === 1);\n}); 2`] = `

Message:
> 1 | foo.some(function (element) {
    |     ^^^^ Use \`.includes()\` instead of \`.some()\` when checking value existence.
  2 | 	return element === bar.some(x => x === 1);
  3 | });

Suggestion 1/1: Replace \`.some()\` with \`.includes()\`.:
  1 | foo.includes(bar.some(x => x === 1));

`;

exports[`prefer-includes > invalid(7): foo.some(function (element) {\n\treturn element === bar.some(x => x === 1);\n}); 3`] = `

Message:
  1 | foo.some(function (element) {
> 2 | 	return element === bar.some(x => x === 1);
    | 	                       ^^^^ Use \`.includes()\` instead of \`.some()\` when checking value existence.
  3 | });

Output:
  1 | foo.some(function (element) {
  2 | 	return element === bar.includes(1);
  3 | });

`;

exports[`prefer-includes > invalid(7): str.indexOf('foo') > -1 1`] = `

  1 | str.indexOf('foo') > -1

`;

exports[`prefer-includes > invalid(7): str.indexOf('foo') > -1 2`] = `

Message:
> 1 | str.indexOf('foo') > -1
    |     ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.

Output:
  1 | str.includes('foo')

`;

exports[`prefer-includes > invalid(8): str.lastIndexOf('foo') > -1 1`] = `

  1 | str.lastIndexOf('foo') > -1

`;

exports[`prefer-includes > invalid(8): str.lastIndexOf('foo') > -1 2`] = `

Message:
> 1 | str.lastIndexOf('foo') > -1
    |     ^^^^^^^^^^^ Use \`.includes()\`, rather than \`.lastIndexOf()\`, when checking for existence.

Output:
  1 | str.includes('foo')

`;

exports[`prefer-includes > invalid(8): values.some(x => x === (0, \"foo\")) 1`] = `

  1 | values.some(x => x === (0, "foo"))

`;

exports[`prefer-includes > invalid(8): values.some(x => x === (0, \"foo\")) 2`] = `

Message:
> 1 | values.some(x => x === (0, "foo"))
    |        ^^^^ Use \`.includes()\` instead of \`.some()\` when checking value existence.

Output:
  1 | values.includes((0, "foo"))

`;

exports[`prefer-includes > invalid(9): <template><div v-if=\"str.indexOf('foo') > -1\"></div></template> 1`] = `

  1 | <template><div v-if="str.indexOf('foo') > -1"></div></template>

`;

exports[`prefer-includes > invalid(9): <template><div v-if=\"str.indexOf('foo') > -1\"></div></template> 2`] = `

Message:
> 1 | <template><div v-if="str.indexOf('foo') > -1"></div></template>
    |                          ^^^^^^^ Use \`.includes()\`, rather than \`.indexOf()\`, when checking for existence.

Output:
  1 | <template><div v-if="str.includes('foo')"></div></template>

`;

exports[`prefer-includes > invalid(9): values.some((x => x === (0, \"foo\"))) 1`] = `

  1 | values.some((x => x === (0, "foo")))

`;

exports[`prefer-includes > invalid(9): values.some((x => x === (0, \"foo\"))) 2`] = `

Message:
> 1 | values.some((x => x === (0, "foo")))
    |        ^^^^ Use \`.includes()\` instead of \`.some()\` when checking value existence.

Output:
  1 | values.includes((0, "foo"))

`;
